fix(help): Fix help description wrapping.

--- a/KodeX/src/main/resources/kodex/presenter/style.css
+++ b/KodeX/src/main/resources/kodex/presenter/style.css
@@ -16,7 +16,11 @@
 }
 
 .scroll-pane {
-	-fx-background-color:transparent;
+	-fx-background-color: transparent;
+}
+
+.scroll-pane > .viewport {
+   -fx-background-color: transparent;
 }
 
 .default-page-title {
